--- a/Blogy.WebUI/Areas/User/Views/Contact/Index.cshtml
+++ b/Blogy.WebUI/Areas/User/Views/Contact/Index.cshtml
@@ -9,28 +9,36 @@
         <h2>Bize Yazın</h2>
 
         <form method="post">
+            @Html.AntiForgeryToken()
+
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
             <div class="mb-3">
                 <label>Ad Soyad</label>
                 <input asp-for="SenderName" class="form-control" />
+                <span asp-validation-for="SenderName" class="text-danger"></span>
             </div>
 
             <div class="mb-3">
                 <label>Email</label>
                 <input asp-for="SenderEmail" type="email" class="form-control" />
+                <span asp-validation-for="SenderEmail" class="text-danger"></span>
             </div>
 
             <div class="mb-3">
                 <label>Konu</label>
                 <input asp-for="Subject" class="form-control" />
+                <span asp-validation-for="Subject" class="text-danger"></span>
             </div>
 
             <div class="mb-3">
                 <label>Mesaj</label>
                 <textarea asp-for="Message" rows="5" class="form-control"></textarea>
+                <span asp-validation-for="Message" class="text-danger"></span>
             </div>
 
             <button class="btn btn-primary">Gönder</button>
         </form>
     </div>
 </section>
+
